fix: role-based JWT authentication
- added role to JWT
- updated JwtAuthenticationFilter
- updated SecurityConfig
- injected BCryptPasswordEncoder
- restricted STUDENT registration
- updated dashboards